Second   完成至06-列表渲染

--- a/02_模板语法/test.html
+++ b/02_模板语法/test.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>02_模板语法</title>
 </head>
+
 <body>
-<!--
+  <!--
 1. 模板的理解:
   动态的html页面
   包含了一些JS语法代码
@@ -29,14 +31,30 @@
     @click='xxx'
 -->
 
-<div id="app">
-  <h2>1. 双大括号表达式</h2>
+  <div id="app">
+    <h2>1. 双大括号表达式</h2>
 
-  <h2>2. 指令一: 强制数据绑定</h2>
+    <h2>2. 指令一: 强制数据绑定</h2>
 
-  <h2>3. 指令二: 绑定事件监听</h2>
-
-</div>
+    <h2 v-on:click="handle">3. 指令二: 绑定事件监听</h2>
+    <a :href="link">gogogoog</a>
+  </div>
 
 </body>
+<script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
+<script>
+  new Vue({
+    el: "#app",
+    data: {
+      link: 'http://www.bilibili.com',
+      app:'1111111111'
+    },
+    methods: {
+      handle(e){
+        alert(e.target.innerHTML+`-----`+this.app)
+      }
+    },
+  })
+</script>
+
 </html>
