--- a/01_HelloWorld/test.html
+++ b/01_HelloWorld/test.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
+
 <body>
-    <div id="app">
-        <input type="text" v-model="msg">
-        <p>Hello,{{msg}}</p>
-    </div>
-    <!-- <span>{{msg}}</span> -->
+  <div id="app">
+    <input type="text" v-model="msg">
+    <p>Hello,{{msg}}</p>
+  </div>
+  <!-- <span>{{msg}}</span> -->
+
+
+  <div id="add">
+    <input type="text" v-model="name">
+    <p>{{name}}</p>
+  </div>
+
+
 </body>
 <script type='text/javascript' src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
 <script type='text/javascript'>
-    new Vue({
-        el:"#app",
-        data:{
-            msg:"bilibili"
-        }
-    })
+  new Vue({
+    el: "#app",
+    data: {
+      msg: "bilibili"
+    }
+  })
 
+  new Vue({
+    el: '#add',
+    data: {
+      name: 'vue'
+    }
 
+  })
+ 
 </script>
+
 </html>
