--- a/06_列表渲染/test.html
+++ b/06_列表渲染/test.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>06_列表渲染</title>
 </head>
+
 <body>
 
-<!--
+  <!--
 1. 列表显示
   数组: v-for / index
   对象: v-for / key
@@ -15,16 +17,70 @@
   替换item
 -->
 
-<div id="demo">
-  <h2>测试: v-for 遍历数组</h2>
+  <div id="demo">
+    <h2>数组显示</h2>
+    <ul>
+      <li v-for="(item, index) in userARR" :key="item.id">
+        {{index}}-{{item.name}}-{{item.age}}--{{item.id}}
+        <button @click='deleteBTN(index)'>删除</button>
+        <button @click="reSetBTn(index,{id:Date.now(),name:'Tom',age:18})">更新</button>
+      </li>
+    </ul>
+   
+    <h2>测试: v-for 遍历对象</h2>
+    <ul>
+      <li v-for="(index, item) in userARR[1]" :key="index">
+       {{item}}-{{index}}
+      </li>
+    </ul>
+  </div>
 
-  <h2>测试: v-for 遍历对象</h2>
+  <script type="text/javascript" src="../js/vue.js"></script>
+  <script type="text/javascript">
+    new Vue({
+      el: '#demo',
+      data: {
+        userARR: [{
+            name: 'jay',
+            age: 19,
+            id: 1
+          },
+          {
+            name: 'qay',
+            age: 20,
+            id: 2
+          },
+          {
+            name: 'way',
+            age: 17,
+            id: 3
+          },
+          {
+            name: 'eay',
+            age: 18,
+            id: 4
+          },
+          {
+            name: 'ray',
+            age: 16,
+            id: 5
+          },
+        ]
+      },
+      methods:{
+        deleteBTN(index){
+          this.userARR.splice(index,1)
+        },
 
-</div>
+        reSetBTn(index,newuser){
+          this.userARR[index].name='113424'
+          this.userARR[index]=newuser
+          // this.userARR.splice(index,1,newuser)
 
-<script type="text/javascript" src="../js/vue.js"></script>
-<script type="text/javascript">
-
-</script>
+        }
+      }
+    })
+  </script>
 </body>
+
 </html>
