Third 完成至13-插件

--- a/06_列表渲染/test.html
+++ b/06_列表渲染/test.html
@@ -73,9 +73,10 @@
         },
 
         reSetBTn(index,newuser){
-          this.userARR[index].name='113424'
-          this.userARR[index]=newuser
-          // this.userARR.splice(index,1,newuser)
+          console.log(this)
+          // this.userARR[index].name='113424'
+          // this.userARR[index]=newuser
+          this.userARR.splice(index,1,newuser)
 
         }
       }
