--- a/08_表单输入绑定/test.html
+++ b/08_表单输入绑定/test.html
@@ -14,40 +14,76 @@
 -->
 <div id="demo">
   <form action="/xxx">
-    <span>用户名: </span>
-    <input type="text"><br>
+    <span >用户名: </span>
+    <input v-model="user.username" type="text"><br>
 
     <span>密码: </span>
-    <input type="password"><br>
+    <input type="password" v-model="user.password"><br>
 
     <span>性别: </span>
-    <input type="radio" id="female">
+    <input type="radio" id="female" v-model="user.sex" value="女">
     <label for="female">女</label>
-    <input type="radio" id="male">
+    <input type="radio" id="male" v-model="user.sex" value="男">
     <label for="male">男</label><br>
 
     <span>爱好: </span>
-    <input type="checkbox" id="basket" >
+    <input type="checkbox" id="basket" v-model="user.like" value="basket">
     <label for="basket">篮球</label>
-    <input type="checkbox" id="foot">
+    <input type="checkbox" id="foot" v-model="user.like" value="foot">
     <label for="foot">足球</label>
-    <input type="checkbox" id="pingpang">
+    <input type="checkbox" id="pingpang" v-model="user.like" value="pingpang">
     <label for="pingpang">乒乓</label><br>
 
     <span>城市: </span>
-    <select>
-      <option value="">未选择</option>
+    <select v-model="user.cityid">
+      <option value='0'>未选择</option>
+      <option v-for="(item, index) in city" :key="item.id" :value="item.id" >
+        {{item.name}}
+      </option>
     </select><br>
     <span>介绍: </span>
-    <textarea rows="10"></textarea><br><br>
+    <textarea rows="10" v-model="user.info"></textarea><br><br>
 
-    <input type="submit" value="注册">
+    <input type="submit" @click='buttunsb' value="注册">
   </form>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+    new Vue({
+      el:'#demo',
+      data: {
+         user:{
+         username:'',
+          password:'',
+          sex:'女',
+          like:[],
+          cityid:'0',
+          info:''
 
+       },
+          city:[
+            {
+              id:'1',
+              name:'bj'
+            },
+            {
+              id:'2',
+              name:'sh'
+            },
+            {
+              id:'3',
+              name:'sz'
+            }
+          ]
+      },
+      methods:{
+        buttunsb(e){
+          e.preventDefault()
+          alert('提交用户信息'+JSON.stringify(this.user))
+        }
+      }
+    })
 </script>
 </body>
 </html>
