--- a/09_Vue实例_生命周期/test.html
+++ b/09_Vue实例_生命周期/test.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>09_Vue实例_生命周期</title>
 </head>
+
 <body>
-<!--
+  <!--
 1. vue对象的生命周期
   1). 初始化显示
     * beforeCreate()
@@ -23,11 +25,45 @@
   beforeDestory(): 做收尾工作, 如: 清除定时器
 -->
 
-<div>
+  <div id="text">
+    <button @click='BtnClick'>VUE</button>
+    <p v-show="isShow">bilibili</p>
+  </div>
 
-</div>
+  <script type="text/javascript" src="../js/vue.js"></script>
+  <script type="text/javascript">
+    new Vue({
+      el: '#text',
+      data: {
+        isShow: true,
+      },
+      mounted() {
+        this.timer= setInterval(() => {
+          console.log('----');
+          this.isShow = !this.isShow
+        })
+      },
+      // beforeDestory() {
+      //   clearInterval(this.timer)
+      // },
+      // methods:{
+      //   BtnClick(){
+      //     this.$destroy()
+      //   }
+      // }
 
-<script type="text/javascript" src="../js/vue.js"></script>
-<script type="text/javascript"></script>
+      // beforeDestory() {
+      // },
+      methods:{
+        BtnClick(){
+          clearInterval(this.timer)
+          this.$destroy()
+        }
+      }
+
+
+    })
+  </script>
 </body>
+
 </html>
