--- a/12_指令/test2.html
+++ b/12_指令/test2.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>12_指令_自定义指令</title>
 </head>
+
 <body>
 
-<!--
+  <!--
 1. 注册全局指令
   Vue.directive('my-directive', function(el, binding){
     el.innerHTML = binding.value.toupperCase()
@@ -22,15 +24,48 @@
 3. 使用指令
   v-my-directive='xxx'
 -->
-<!--
+  <!--
 需求: 自定义2个指令
   1. 功能类型于v-text, 但转换为全大写
   2. 功能类型于v-text, 但转换为全小写
 -->
+  <div id="root">
+    <span v-my-dir='msg'></span>
+    <span v-my-dit='msg'></span>
+  </div>
 
+
+  <div id="root2">
+    <span v-my-dir='msg'></span>
+    <span v-my-dit='msg'></span>
+  </div>
+
+</body>
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  Vue.directive('my-dir', function (el, binding) {
+    console.log(binding);
+    el.textContent = binding.value.toUpperCase()
+  })//全局指令
 
+  new Vue({
+    el: '#root',
+    data: {
+      msg: 'HELLO-word'
+    },
+    directives:{
+      'my-dit'  (el,binding){
+       el.textContent = binding.value.toLowerCase()
+
+      }//局部指令 
+    }
+  })
+
+  new Vue({
+    el:"#root2",
+    data:{
+      msg: 'HELLO-word'
+    }
+  })
 </script>
-</body>
 </html>
